--- a/json/check.ipynb
+++ b/json/check.ipynb
@@ -2,15 +2,507 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Install dependencies\n",
+    "!pip -q install pandas openpyxl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Função\n",
+    "import pandas as pd\n",
+    "import json\n",
+    "import os\n",
+    "\n",
+    "def process_json_files(folder_path):\n",
+    "    \"\"\"\n",
+    "    Processa arquivos JSON em um diretório, extraindo campos específicos,\n",
+    "    convertendo timestamps Epoch para datetime e adicionando o dia da semana.\n",
+    "\n",
+    "    Args:\n",
+    "        folder_path (str): Caminho para o diretório contendo os arquivos JSON.\n",
+    "\n",
+    "    Returns:\n",
+    "        pandas.DataFrame: DataFrame contendo os dados processados dos arquivos JSON.\n",
+    "                          Retorna um DataFrame vazio se ocorrer algum erro ou não houver arquivos.\n",
+    "    \"\"\"\n",
+    "    data = []\n",
+    "\n",
+    "    try:\n",
+    "        for filename in os.listdir(folder_path):\n",
+    "            if filename.endswith(\".json\"):\n",
+    "                file_path = os.path.join(folder_path, filename)\n",
+    "                with open(file_path, 'r', encoding='utf-8') as f:  # Especifica a codificação UTF-8\n",
+    "                    try:\n",
+    "                        json_data = json.load(f)\n",
+    "                        for processo in json_data.get('processos', []):  # Lida com a possibilidade de 'processos' não existir\n",
+    "                            ordem = processo.get('ordem')\n",
+    "                            primeira_distribuicao = processo.get('primeiraDistribuicao')\n",
+    "                            data_informacao = processo.get('dataInformacao')\n",
+    "\n",
+    "                            # Converte timestamps Epoch para datetime\n",
+    "                            if primeira_distribuicao:\n",
+    "                                primeira_distribuicao = pd.to_datetime(primeira_distribuicao, unit='ms')\n",
+    "                            if data_informacao:\n",
+    "                                data_informacao = pd.to_datetime(data_informacao, unit='ms')\n",
+    "                                dia_da_semana = data_informacao.day_name()  # Obtém o dia da semana\n",
+    "                            else:\n",
+    "                                dia_da_semana = None\n",
+    "\n",
+    "                            data.append({\n",
+    "                                'ordem': ordem,\n",
+    "                                'primeiraDistribuicao': primeira_distribuicao,\n",
+    "                                'dataInformacao': data_informacao,\n",
+    "                                'dia_da_semana': dia_da_semana\n",
+    "                            })\n",
+    "                    except json.JSONDecodeError as e:\n",
+    "                        print(f\"Erro ao decodificar JSON em {filename}: {e}\")\n",
+    "                    except Exception as e:\n",
+    "                        print(f\"Erro ao processar {filename}: {e}\")\n",
+    "    except FileNotFoundError:\n",
+    "        print(f\"Diretório não encontrado: {folder_path}\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Ocorreu um erro: {e}\")\n",
+    "\n",
+    "    return pd.DataFrame(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     ordem primeiraDistribuicao      dataInformacao dia_da_semana\n",
+      "0      855  2023-03-23 03:00:00 2024-12-13 03:00:00        Friday\n",
+      "1      878  2023-03-23 03:00:00 2024-11-22 03:00:00        Friday\n",
+      "2      811  2023-03-23 03:00:00 2024-12-30 03:00:00        Monday\n",
+      "3      920  2023-03-23 03:00:00 2024-11-06 03:00:00     Wednesday\n",
+      "4     1134  2023-03-23 03:00:00 2024-09-27 03:00:00        Friday\n",
+      "..     ...                  ...                 ...           ...\n",
+      "190    811  2023-03-23 03:00:00 2025-01-02 03:00:00      Thursday\n",
+      "191    878  2023-03-23 03:00:00 2024-11-22 03:00:00        Friday\n",
+      "192   1247  2023-03-23 03:00:00 2024-09-02 03:00:00        Monday\n",
+      "193    900  2023-03-23 03:00:00 2024-11-07 03:00:00      Thursday\n",
+      "194   1255  2023-03-23 03:00:00 2024-08-30 03:00:00        Friday\n",
+      "\n",
+      "[195 rows x 4 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Uso\n",
+    "folder_path = 'SF1'\n",
+    "df = process_json_files(folder_path)\n",
+    "\n",
+    "if not df.empty:\n",
+    "    print(df)\n",
+    "    df.to_excel('SF1.xlsx')\n",
+    "    # df.to_csv('dados_processados.csv', index=False, encoding='utf-8')\n",
+    "else:\n",
+    "    print(\"Nenhum dado foi processado.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ordem</th>\n",
+       "      <th>primeiraDistribuicao</th>\n",
+       "      <th>dataInformacao</th>\n",
+       "      <th>dia_da_semana</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>855</td>\n",
+       "      <td>2023-03-23 03:00:00</td>\n",
+       "      <td>2024-12-13 03:00:00</td>\n",
+       "      <td>Friday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>878</td>\n",
+       "      <td>2023-03-23 03:00:00</td>\n",
+       "      <td>2024-11-22 03:00:00</td>\n",
+       "      <td>Friday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>811</td>\n",
+       "      <td>2023-03-23 03:00:00</td>\n",
+       "      <td>2024-12-30 03:00:00</td>\n",
+       "      <td>Monday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>920</td>\n",
+       "      <td>2023-03-23 03:00:00</td>\n",
+       "      <td>2024-11-06 03:00:00</td>\n",
+       "      <td>Wednesday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1134</td>\n",
+       "      <td>2023-03-23 03:00:00</td>\n",
+       "      <td>2024-09-27 03:00:00</td>\n",
+       "      <td>Friday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>190</th>\n",
+       "      <td>811</td>\n",
+       "      <td>2023-03-23 03:00:00</td>\n",
+       "      <td>2025-01-02 03:00:00</td>\n",
+       "      <td>Thursday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>191</th>\n",
+       "      <td>878</td>\n",
+       "      <td>2023-03-23 03:00:00</td>\n",
+       "      <td>2024-11-22 03:00:00</td>\n",
+       "      <td>Friday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>192</th>\n",
+       "      <td>1247</td>\n",
+       "      <td>2023-03-23 03:00:00</td>\n",
+       "      <td>2024-09-02 03:00:00</td>\n",
+       "      <td>Monday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>193</th>\n",
+       "      <td>900</td>\n",
+       "      <td>2023-03-23 03:00:00</td>\n",
+       "      <td>2024-11-07 03:00:00</td>\n",
+       "      <td>Thursday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>194</th>\n",
+       "      <td>1255</td>\n",
+       "      <td>2023-03-23 03:00:00</td>\n",
+       "      <td>2024-08-30 03:00:00</td>\n",
+       "      <td>Friday</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>195 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     ordem primeiraDistribuicao      dataInformacao dia_da_semana\n",
+       "0      855  2023-03-23 03:00:00 2024-12-13 03:00:00        Friday\n",
+       "1      878  2023-03-23 03:00:00 2024-11-22 03:00:00        Friday\n",
+       "2      811  2023-03-23 03:00:00 2024-12-30 03:00:00        Monday\n",
+       "3      920  2023-03-23 03:00:00 2024-11-06 03:00:00     Wednesday\n",
+       "4     1134  2023-03-23 03:00:00 2024-09-27 03:00:00        Friday\n",
+       "..     ...                  ...                 ...           ...\n",
+       "190    811  2023-03-23 03:00:00 2025-01-02 03:00:00      Thursday\n",
+       "191    878  2023-03-23 03:00:00 2024-11-22 03:00:00        Friday\n",
+       "192   1247  2023-03-23 03:00:00 2024-09-02 03:00:00        Monday\n",
+       "193    900  2023-03-23 03:00:00 2024-11-07 03:00:00      Thursday\n",
+       "194   1255  2023-03-23 03:00:00 2024-08-30 03:00:00        Friday\n",
+       "\n",
+       "[195 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Weekly Quantity Change Report:\n",
+      "    Week  Weekly Quantity Change\n",
+      "0      1                       0\n",
+      "1      2                      -7\n",
+      "2      3                     -38\n",
+      "3      4                     -25\n",
+      "4      5                     -52\n",
+      "5      6                     -25\n",
+      "6      7                     -14\n",
+      "7      8                      16\n",
+      "8     32                      -6\n",
+      "9     33                     -81\n",
+      "10    34                     -13\n",
+      "11    35                      -5\n",
+      "12    36                     -20\n",
+      "13    37                     -35\n",
+      "14    38                      -9\n",
+      "15    39                     -71\n",
+      "16    40                     -42\n",
+      "17    41                     -22\n",
+      "18    42                      -6\n",
+      "19    43                     -58\n",
+      "20    44                     -72\n",
+      "21    45                     -20\n",
+      "22    46                     -24\n",
+      "23    47                       2\n",
+      "24    48                      -6\n",
+      "25    49                      -2\n",
+      "26    50                     -15\n",
+      "27    51                     -44\n",
+      "28    52                       0\n",
+      "29    53                       0\n",
+      "\n",
+      "------------------------------------\n",
+      "\n",
+      "Quantity Reduction Estimate:\n",
+      "Current Quantity: 666\n",
+      "Average daily quantity reduction (considering only reductions): 10.55\n",
+      "Estimated days to reach zero: 63.16 days\n",
+      "Estimated date to reach zero quantity: 23/04/2025\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import io\n",
+    "\n",
+    "data = \"\"\"Quantity,Data,Day of Week,Week,Delta\n",
+    "1360,06/08/2024,Tuesday,32,--\n",
+    "1354,08/08/2024,Thursday,32,-6\n",
+    "1354,09/08/2024,Friday,32,0\n",
+    "1354,10/08/2024,Saturday,32,0\n",
+    "1298,13/08/2024,Tuesday,33,-56\n",
+    "1282,14/08/2024,Wednesday,33,-16\n",
+    "1282,15/08/2024,Thursday,33,0\n",
+    "1273,16/08/2024,Friday,33,-9\n",
+    "1273,17/08/2024,Saturday,33,0\n",
+    "1273,19/08/2024,Monday,34,0\n",
+    "1262,21/08/2024,Wednesday,34,-11\n",
+    "1264,22/08/2024,Thursday,34,2\n",
+    "1261,23/08/2024,Friday,34,-3\n",
+    "1260,24/08/2024,Saturday,34,-1\n",
+    "1284,26/08/2024,Monday,35,24\n",
+    "1285,27/08/2024,Tuesday,35,1\n",
+    "1255,30/08/2024,Friday,35,-30\n",
+    "1247,02/09/2024,Monday,36,-8\n",
+    "1247,03/09/2024,Tuesday,36,0\n",
+    "1247,04/09/2024,Wednesday,36,0\n",
+    "1237,05/09/2024,Thursday,36,-10\n",
+    "1235,07/09/2024,Saturday,36,-2\n",
+    "1229,09/09/2024,Monday,37,-6\n",
+    "1212,10/09/2024,Tuesday,37,-17\n",
+    "1212,11/09/2024,Wednesday,37,0\n",
+    "1212,12/09/2024,Thursday,37,0\n",
+    "1200,14/09/2024,Saturday,37,-12\n",
+    "1207,16/09/2024,Monday,38,7\n",
+    "1203,17/09/2024,Tuesday,38,-4\n",
+    "1204,18/09/2024,Wednesday,38,1\n",
+    "1196,19/09/2024,Thursday,38,-8\n",
+    "1191,20/09/2024,Friday,38,-5\n",
+    "1188,23/09/2024,Monday,39,-3\n",
+    "1169,24/09/2024,Tuesday,39,-19\n",
+    "1162,25/09/2024,Wednesday,39,-7\n",
+    "1147,26/09/2024,Thursday,39,-15\n",
+    "1134,27/09/2024,Friday,39,-13\n",
+    "1120,28/09/2024,Saturday,39,-14\n",
+    "1098,01/10/2024,Tuesday,40,-22\n",
+    "1096,02/10/2024,Wednesday,40,-2\n",
+    "1084,03/10/2024,Thursday,40,-12\n",
+    "1078,04/10/2024,Friday,40,-6\n",
+    "1077,07/10/2024,Monday,41,-1\n",
+    "1073,08/10/2024,Tuesday,41,-4\n",
+    "1059,10/10/2024,Thursday,41,-14\n",
+    "1056,11/10/2024,Friday,41,-3\n",
+    "1049,14/10/2024,Monday,42,-7\n",
+    "1049,15/10/2024,Tuesday,42,0\n",
+    "1048,16/10/2024,Wednesday,42,-1\n",
+    "1050,17/10/2024,Thursday,42,2\n",
+    "1031,21/10/2024,Monday,43,-19\n",
+    "1020,22/10/2024,Tuesday,43,-11\n",
+    "1014,23/10/2024,Wednesday,43,-6\n",
+    "1014,24/10/2024,Thursday,43,0\n",
+    "992,25/10/2024,Friday,43,-22\n",
+    "982,28/10/2024,Monday,44,-10\n",
+    "945,29/10/2024,Tuesday,44,-37\n",
+    "938,30/10/2024,Wednesday,44,-7\n",
+    "938,31/10/2024,Thursday,44,0\n",
+    "920,01/11/2024,Friday,44,-18\n",
+    "920,04/11/2024,Monday,45,0\n",
+    "920,05/11/2024,Tuesday,45,0\n",
+    "920,06/11/2024,Wednesday,45,0\n",
+    "900,07/11/2024,Thursday,45,-20\n",
+    "885,11/11/2024,Monday,46,-15\n",
+    "887,12/11/2024,Tuesday,46,2\n",
+    "889,13/11/2024,Wednesday,46,2\n",
+    "885,14/11/2024,Thursday,46,-4\n",
+    "876,15/11/2024,Friday,46,-9\n",
+    "876,18/11/2024,Monday,47,0\n",
+    "876,19/11/2024,Tuesday,47,0\n",
+    "876,20/11/2024,Wednesday,47,0\n",
+    "876,21/11/2024,Thursday,47,0\n",
+    "878,22/11/2024,Friday,47,2\n",
+    "882,25/11/2024,Monday,48,4\n",
+    "870,26/11/2024,Tuesday,48,-12\n",
+    "865,27/11/2024,Wednesday,48,-5\n",
+    "860,28/11/2024,Thursday,48,-5\n",
+    "872,29/11/2024,Friday,48,12\n",
+    "885,04/12/2024,Wednesday,49,13\n",
+    "885,05/12/2024,Thursday,49,0\n",
+    "870,06/12/2024,Friday,49,-15\n",
+    "870,09/12/2024,Monday,50,0\n",
+    "870,10/12/2024,Tuesday,50,0\n",
+    "864,11/12/2024,Wednesday,50,-6\n",
+    "858,12/12/2024,Thursday,50,-6\n",
+    "855,13/12/2024,Friday,50,-3\n",
+    "826,16/12/2024,Monday,51,-29\n",
+    "825,17/12/2024,Tuesday,51,-1\n",
+    "828,18/12/2024,Wednesday,51,3\n",
+    "820,19/12/2024,Thursday,51,-8\n",
+    "811,20/12/2024,Friday,51,-9\n",
+    "811,23/12/2024,Monday,52,0\n",
+    "811,24/12/2024,Tuesday,52,0\n",
+    "811,25/12/2024,Wednesday,52,0\n",
+    "811,27/12/2024,Friday,52,0\n",
+    "811,30/12/2024,Monday,53,0\n",
+    "811,31/12/2024,Tuesday,53,0\n",
+    "811,01/01/2025,Wednesday,1,0\n",
+    "811,02/01/2025,Thursday,1,0\n",
+    "811,03/01/2025,Friday,1,0\n",
+    "811,06/01/2025,Monday,2,0\n",
+    "811,07/01/2025,Tuesday,2,0\n",
+    "807,08/01/2025,Wednesday,2,-4\n",
+    "802,09/01/2025,Thursday,2,-5\n",
+    "804,10/01/2025,Friday,2,2\n",
+    "806,13/01/2025,Monday,3,2\n",
+    "794,14/01/2025,Tuesday,3,-12\n",
+    "787,15/01/2025,Wednesday,3,-7\n",
+    "768,16/01/2025,Thursday,3,-19\n",
+    "766,17/01/2025,Friday,3,-2\n",
+    "763,20/01/2025,Monday,4,-3\n",
+    "762,21/01/2025,Tuesday,4,-1\n",
+    "756,22/01/2025,Wednesday,4,-6\n",
+    "760,23/01/2025,Thursday,4,4\n",
+    "741,24/01/2025,Friday,4,-19\n",
+    "741,27/01/2025,Monday,5,0\n",
+    "741,28/01/2025,Tuesday,5,0\n",
+    "716,29/01/2025,Wednesday,5,-25\n",
+    "705,30/01/2025,Thursday,5,-11\n",
+    "689,31/01/2025,Friday,5,-16\n",
+    "673,03/02/2025,Monday,6,-16\n",
+    "672,04/02/2025,Tuesday,6,-1\n",
+    "670,05/02/2025,Wednesday,6,-2\n",
+    "652,06/02/2025,Thursday,6,-18\n",
+    "664,07/02/2025,Friday,6,12\n",
+    "657,10/02/2025,Monday,7,-7\n",
+    "653,11/02/2025,Tuesday,7,-4\n",
+    "657,12/02/2025,Wednesday,7,4\n",
+    "650,13/02/2025,Thursday,7,-7\n",
+    "650,14/02/2025,Friday,7,0\n",
+    "650,17/02/2025,Monday,8,0\n",
+    "647,18/02/2025,Tuesday,8,-3\n",
+    "666,19/02/2025,Wednesday,8,19\n",
+    "\"\"\"\n",
+    "\n",
+    "df = pd.read_csv(io.StringIO(data))\n",
+    "\n",
+    "# Data Cleaning and Conversion\n",
+    "df['Data'] = pd.to_datetime(df['Data'], format='%d/%m/%Y')\n",
+    "df['Delta'] = df['Delta'].replace('--', 0)\n",
+    "df['Delta'] = pd.to_numeric(df['Delta'], errors='coerce').fillna(0) # Explicitly convert to numeric, handling potential errors and NaNs\n",
+    "\n",
+    "# Weekly Process Report\n",
+    "weekly_report = df.groupby('Week')['Delta'].sum().reset_index()\n",
+    "weekly_report.columns = ['Week', 'Weekly Quantity Change']\n",
+    "\n",
+    "print(\"Weekly Quantity Change Report:\")\n",
+    "print(weekly_report)\n",
+    "print(\"\\n------------------------------------\\n\")\n",
+    "\n",
+    "# Estimate Time to Reach Zero Quantity\n",
+    "last_quantity = df['Quantity'].iloc[-1]\n",
+    "average_daily_reduction = -df['Delta'][df['Delta'] < 0].mean() # Average of negative deltas (reductions)\n",
+    "\n",
+    "if average_daily_reduction > 0:\n",
+    "    days_to_zero = last_quantity / average_daily_reduction\n",
+    "    from datetime import date, timedelta\n",
+    "    today = df['Data'].max() # Using the latest date in the data as 'today' for projection\n",
+    "    estimated_date_zero = today + timedelta(days=days_to_zero)\n",
+    "    estimated_date_zero_str = estimated_date_zero.strftime('%d/%m/%Y')\n",
+    "else:\n",
+    "    estimated_date_zero_str = \"Cannot estimate reliably as average reduction is not positive.\"\n",
+    "\n",
+    "print(\"Quantity Reduction Estimate:\")\n",
+    "print(f\"Current Quantity: {last_quantity}\")\n",
+    "print(f\"Average daily quantity reduction (considering only reductions): {average_daily_reduction:.2f}\")\n",
+    "if average_daily_reduction > 0:\n",
+    "    print(f\"Estimated days to reach zero: {days_to_zero:.2f} days\")\n",
+    "    print(f\"Estimated date to reach zero quantity: {estimated_date_zero_str}\")\n",
+    "else:\n",
+    "    print(estimated_date_zero_str)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
